# VibeRendering

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  prompts.md  vcpkg.json
assets/: Sponza.gltf
assets/shaders/: mesh.frag.spv  mesh.vert.spv  shadow.vert.spv  shadow_cube.frag.spv  shadow_cube.vert.spv
shaders/: mesh.frag  mesh.vert  shadow.vert  shadow_cube.frag  shadow_cube.vert
src/: App.cpp  App.h  CMakeLists.txt  GltfLoader.cpp  GltfLoader.h  Mesh.h  Pipeline.cpp  Pipeline.h  Renderer.cpp  Renderer.h  Swapchain.cpp  Swapchain.h  VulkanContext.cpp  VulkanContext.h  main.cpp
